<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white">

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="@string/change_password1"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/oldpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_your_old_password"
                android:gravity="center"/>

            <EditText
                android:id="@+id/newpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/oldpass"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_your_new_password"
                android:gravity="center"/>

            <EditText
                android:id="@+id/confirmnewpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newpass"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:hint="@string/confirm_your_new_password"
                android:gravity="center"/>

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/buttonbk"
                android:text="@string/change"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/alertimage"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>