<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="260dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white">

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/femailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_your_email_address"
                android:inputType="textMultiLine"
                android:gravity="center"/>

            <Button
                android:id="@+id/fSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/buttonbk"
                android:text="@string/submit"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/alertimage"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>